--- a/css/login-page.css
+++ b/css/login-page.css
@@ -1,16 +1,52 @@
+
+
 body{
     margin: 0;
     padding: 0;
+}
+
+#container{
+    margin-top: -20px;
+    overflow-x: hidden;
+    margin-left: -20px;
+    height: 110vh;
+    width: 100vw;
+    padding: 0;
     border: 0;
-    outline: 0;
-    width: 100%;
     background-image: url("../images/marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 98vh;
-    opacity: 0.7;
-    font-family: Arial, Helvetica, sans-serif;
+    opacity: 0.9;
+    font-family: Arial, Helvetica, sans-serif;    
+}
+
+nav{
+    height: auto;
+    width: auto;
+    float: right;
+    margin-right: 50px;
+}
+
+
+nav ul li {
+    display: inline-block;
+    margin-left: 15px;
+    margin-top: 50px;
+}
+
+nav ul li a{
+    color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+    padding: 4px;
+}
+
+nav ul li a:hover{
+    color: #66bfbf;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    padding: 10px;
 }
 
 .color-changer{
@@ -38,7 +74,7 @@ h1{
 }
 
 main{
-    margin-top: 80px;
+    margin-top: 150px;
     margin-left: 35vw;
 }
 
@@ -50,6 +86,7 @@ main{
     height: 80vh;
     width: 25vw;
     margin: auto;
+    margin-top: -50px;
     text-align: center;
     line-height: 3rem;
 }
