--- a/css/home.css
+++ b/css/home.css
@@ -11,11 +11,12 @@ body {
 
 #box {
   background-color: black;
+  background-image: url("../images/crowd-1056764_1280.jpg");
   /* width: 100%; */
   margin-left: 5%;
   height: 46rem;
   width: 100%;
-  position: relative;
+  /* position: relative; */
 }
 .navbar {
   /* display: flex; */
@@ -39,7 +40,7 @@ h1 {
   border: 0 none;
   height: 40px;
   margin-right: 0;
-  color: white;
+  color: #333;
   outline: none;
   box-sizing: border-box;
   transition: all 0.15s;
@@ -50,6 +51,7 @@ h1 {
   text-transform: uppercase;
   margin: 10px;
   font-size: 13px;
+  font-family: Arial;
 }
 
 .navbar {
@@ -122,4 +124,31 @@ a:hover {
 }
 a:active {
   color: #c0f0fc;
+}
+
+@media only screen and (max-width: 700px) {
+  #searchtext {
+    width: 250px;
+    margin-right: 50px;
+  }
+
+  .search-right {
+    margin: 8% 0% -6% 20%;
+  }
+  #box li {
+    display: block;
+    text-transform: uppercase;
+    margin: 10px;
+    font-size: 23px;
+    font-family: Arial;
+    display: grid;
+    line-height: 4rem;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 550px) {
+  #left-box {
+    min-width: 200px;
+  }
 }
