--- a/css/login-page.css
+++ b/css/login-page.css
@@ -1,5 +1,3 @@
-
-
 body{
     margin: 0;
     padding: 0;
@@ -120,4 +118,28 @@ main{
     border-radius: 10px;
     font-size: 0.7rem;
 
+}
+
+@media only screen and (max-width: 750px){
+    #form-content{
+        width: 50vw;
+        height: 70vh;
+        overflow: hidden;
+    }
+
+    nav ul{
+        margin-right: 20vw;
+        margin-bottom: 15vh;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    #form-content{
+        width: 60vw;
+        height: 70vh;
+    }
+
+    nav ul{
+        margin-right: 4vw;
+    }
 }
