--- a/css/signup-page.css
+++ b/css/signup-page.css
@@ -61,7 +61,7 @@ main {
 }
 
 #signup-heading {
-  margin-left: 125px;
+  text-align: center;
   margin-top: 20px;
 }
 
@@ -80,16 +80,52 @@ main {
 }
 
 .form-classes input {
+  border-radius: 5px;
   height: 23x;
   padding-right: 5px;
 }
 
-button {
-  margin-top: 40px;
-  margin-left: 40px;
-  height: 40px;
-  width: 80%;
-  border-radius: 10px;
+.form-classes input:hover {
+  height: 25px;
+  transition: height 1s ease;
+}
+
+.sign-up-button {
   opacity: 0.7;
-  background-color: violet;
+  width: 80%;
+  background-color: hotpink;
+  border-radius: 6px;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  display: inline-block;
+  font-size: 20px;
+  margin: auto;
+  margin-top: 10%;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.sign-up-button:hover {
+  background-color: #b983ff;
+  opacity: 1;
+  border-radius: 20px;
+  border: 3px solid #66bfbf;
+  transition: border 1s ease;
+  transition: border-radius 2s ease;
+}
+
+
+@media only screen and (max-width: 855px){
+
+  #form-content{
+    width: 70vw;
+  }
+
+  nav ul{
+    position: absolute;
+    top: 10px;
+    right: 40vw;
+
+  }
 }
