--- a/css/home.css
+++ b/css/home.css
@@ -10,9 +10,10 @@ body {
 }
 
 #box {
-  background-color: black;
   background-image: url("../images/crowd-1056764_1280.jpg");
   /* width: 100%; */
+  background-position: center;
+  background-size: contain;
   margin-left: 5%;
   height: 46rem;
   width: 100%;
@@ -30,17 +31,33 @@ h1 {
 
 .search-right {
   margin: -2% 0% 0% 40%;
+  border-radius: 10px ;
+  border: 1px solid #66bfbf;
+  display: flex;
+}
+
+.search-right:hover{
+  padding: 2px;
+  transition: padding 0.8s ease;
+}
+
+.search-right i{
+  color: white;
+  font-size: 1.2rem;
+  position: absolute;
+  right: 2%;
+  top: 7%;
 }
 
 #searchtext {
   width: 620px;
+  background-color: transparent;
   padding: 5px 0 5px 10px;
   font-size: 16px;
   font-family: Montserrat, sans-serif;
   border: 0 none;
   height: 40px;
-  margin-right: 0;
-  color: #333;
+  color: peachpuff;
   outline: none;
   box-sizing: border-box;
   transition: all 0.15s;
@@ -160,7 +177,7 @@ a:active {
 
   #main-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     margin: 200px;
   }
 }
