--- a/css/login-page.css
+++ b/css/login-page.css
@@ -1,163 +1,189 @@
-body{
+* {
+    padding: 0;
     margin: 0;
-    padding: 0;
-}
-
-#container{
-    margin-top: -20px;
-    overflow-x: hidden;
-    margin-left: -20px;
-    height: 110vh;
+  }
+  
+  /* Cotainer-div */
+  #container {
     width: 100vw;
-    padding: 0;
-    border: 0;
+    height: 100vh;
     background-image: url("../images/marcela-laskoski-YrtFlrLo2DQ-unsplash.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     opacity: 0.9;
-    font-family: Arial, Helvetica, sans-serif;    
-}
-
-nav{
-    height: auto;
-    width: auto;
+  }
+  
+  /* Header-Started */
+  
+  /* Nav-Bar */
+  
+  nav {
     float: right;
     margin-right: 50px;
-}
-
-
-nav ul li {
-    display: inline-block;
-    margin-left: 15px;
     margin-top: 50px;
-}
-
-nav ul li a{
+  }
+  
+  nav li {
+    display: inline-block;
+    margin-left: 10px;
+  }
+  
+  nav li a {
     color: white;
+    text-decoration: none;
+    padding: 5px;
+    border-radius: 4px;
     border: 2px solid white;
-    border-radius: 5px;
-    padding: 4px;
-}
-
-nav ul li a:hover{
+  }
+  
+  nav li a:hover {
     color: #66bfbf;
     transition-duration: 1s;
     transition-timing-function: ease;
     padding: 10px;
-}
-
-.color-changer{
+  }
+  
+  /* Main-div-Started */
+  main {
     color: white;
-    font-size: 1.1rem;
-    margin-right: 10px;
-}
-div input{
-    border-radius: 5px;
-    height: 20px;
-    padding: 5px;
-}
-
-
-h1{
-    color: white;
-    font-family: cursive;
-    font-weight: bolder;
-}
-
-.user-id{
-    font-size: 1.2rem;
-    margin-top: 20px;
-
-}
-
-main{
-    margin-top: 150px;
-    margin-left: 35vw;
-}
-
-#form-content{
-    /* background-color: #A2D2FF; */
-    border-radius: 20px;
-    border: 2px solid lightgray;
-    display: inline-block;
-    height: 80vh;
-    width: 25vw;
+  }
+  
+  /* Form Content */
+  
+  #form-content {
+    height: 90vh;
+    width: 30vw;
+    border-radius: 10px;
+    border: 1px dotted white;
     margin: auto;
-    margin-top: -50px;
+    position: relative;
+    top: 50px;
+  }
+  
+  #form-content:hover{
+    border: 3px solid #D074CF;
+    transition: border 0.3s ease;
+  }
+  
+  .form-classes span{
+    display: block;
     text-align: center;
-    line-height: 3rem;
-}
-#form-content #check{
+    color: red;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    margin-top: 10px;
+  }
+  
+  #signup-heading {
+    margin-top: 20px;
+    text-align: center;
+  }
+  
+  .form-classes {
+    font-size: 1.2rem;
+    margin-top: 40px;
+    margin-left: 50px;
+  }
+  
+  .form-classes #checkbox {
+    margin-left: 50px;
+  }
+  
+  .form-classes p {
     display: inline-block;
-
-}
-
-
-#form-content p{
-    display: inline-block;
-    color: white;
-    font-size: 0.9rem;
-}
-.sign-in-button{
-    opacity: 0.7;
-    width: 70%;
-    background-color: hotpink;
-    border-radius: 6px;
+  }
+  
+  .form-classes input {
+    border-radius: 5px;
+    height: 23x;
+    width: 13rem;
+  }
+  
+  .form-classes input{
+    padding: 6px;
+    text-align: center;
+  }
+  
+  .form-classes input:hover{
+    border-radius: 20px;
+    border: 2px solid #D074CF;
+    transition: border-radius 1s ease;
+  }
+  
+  .form-classes .sign-up-button {
+    opacity: 0.9;
+    text-align: center;
+    height: 40px;
+    width: 80%;
+    border-color: hotpink;
+    background-color: #77bfbf;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     color: white;
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
-    font-size:20px;
+    font-size: 20px;
     margin: auto;
-    margin-top: 10%;
+    margin-top: 5%;
     cursor: pointer;
     text-decoration: none;
   }
   
-  .sign-in-button:hover {
-      background-color: #b983ff;
-      opacity: 1;
-      border-radius: 25px;
-      border: 3px solid #66bfbf;
-      transition: border 0.8s ease;
-      transition: border-radius 2s ease;
-    }
-
-
-#forgot-pass{
-    text-decoration: none;
-    font-weight: bolder;
-    font-family: sans-serif;
-    text-align: left;
-    padding:10px;
-    color: #ffffff;
-    background-color: #333;
-    border-radius: 10px;
-    font-size: 0.7rem;
-
-}
-
-@media only screen and (max-width: 750px){
+  .sign-up-button:hover {
+    background-color: hotpink;
+    opacity: 1;
+    border-radius: 20px;
+    border: 3px solid #66bfbf;
+    transition: border-radius 0.8s ease;
+  }
+  
+  
+  @media only screen and (max-width: 1154px){
+  
     #form-content{
-        width: 50vw;
-        height: 70vh;
-        overflow: hidden;
+      width: 50vw;
     }
-
+  
     nav ul{
-        margin-right: 20vw;
-        margin-bottom: 15vh;
+      position: absolute;
+      top: 10px;
+      right: 40vw;
+  
     }
-}
-
-@media only screen and (max-width: 450px){
+  } 
+  @media only screen and (max-width: 471px){
+  
+    body{
+      overflow: hidden;
+    }
+  
+    #form-content input{
+     margin-right: 10px;
+    }
+  
+    nav ul{
+      position: absolute;
+      top: 10px;
+      right: 40vw;
+  
+    }
+  } 
+  
+  
+  @media only screen and (max-width: 855px){
+  
     #form-content{
-        width: 60vw;
-        height: 70vh;
+      width: 70vw;
     }
-
+  
     nav ul{
-        margin-right: 4vw;
+      position: absolute;
+      top: 10px;
+      right: 40vw;
+  
     }
-}
+    .form-classes input{
+      margin-top: 5px;
+    }
+  } 
